--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
+    "android": "npx react-native run-android",
+    "ios": "npx react-native run-ios",
+    "start": "npx react-native start",
     "test": "jest",
     "lint": "eslint",
     "android-dev": "adb reverse tcp:8081 tcp:8081 && react-native run-android"
@@ -15,8 +15,10 @@
     "@react-native-firebase/app": "^15.1.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1"
   },
