Added Stack Navigation. Added Drawer Navigation. Added Pagination.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services'
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"  
 import com.android.build.OutputFile
 
 /**
@@ -284,6 +285,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(':react-native-vector-icons')  
 }
 
 if (isNewArchitectureEnabled()) {
