--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-native-firebase/app": "^15.1.1",
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.1"
+    "react-native-screens": "^3.14.1",
+    "react-native-simple-toast": "^1.1.4",
+    "react-native-vector-icons": "^9.2.0",
+    "simple-react-validator": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react-native-vector-icons": "^6.4.11",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
