--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-calendars": "^1.1286.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^2.9.1",
